bau: Rebase master
Also some refactoring / code cleanup.